# PiAA

./: README.md
lab_rab5/: .gitignor  CMakeLists.txt  README.md  gitignore.gitignore  run.sh
lab_rab5/include/: Kmp_functions.h
lab_rab5/src/: Kmp_functions.cpp  kmp.cpp  shift.cpp
lab_rab5/test/: test.cpp  test_kmp.cpp  test_prefix.cpp  test_shift.cpp
lab_rab6/: CMakeLists.txt  README.md  run.sh
lab_rab6/hdr/: AKfunc.hpp
lab_rab6/src/: AKfunc.cpp  AKstandart.cpp  AKwithDJoker.cpp
lab_rab6/test/: test.cpp
